--- a/Diocese/home/templates/index.html
+++ b/Diocese/home/templates/index.html
@@ -1,4 +1,5 @@
-{% load static %}
+
+
 <!DOCTYPE html>
 <HTML>
 
@@ -7,21 +8,23 @@
 
     <meta http-equiv="US-X-Compatible" content="IE-Edge">
     <meta charset="UTF-8">
+    <h1 id="intro">DIOCESE</h1>
     <meta name="viewport" content="width=device-width, inital-scale=1.0">
     </head>
-    <link href="/static/img/styles.css" rel="stylesheet">
+    <link href="/Diocese/static/img/styles.css" rel="stylesheet">
 
     <body>
-        <h1 id="intro">DIOCESE</h1>
-        <section class="box-bottom">
+
+    <main>
+        <div class="container">
             <div class="bottom">Inicio</div>
             <div class="bottom">Projetos</div>
             <div class="bottom">Livros</div>
             <div class="bottom">Doações</div>
-            <div class="bottom">Sobre nós</div>
-        </section>
-    <main class="container">
-            
+            <div class="bottom">Sobre nós</div>   
+        </div>
+
+        <section class="box-bottom"></section>     
         
     </main>  
     <footer>
