--- a/Diocese/static/img/styles.css
+++ b/Diocese/static/img/styles.css
@@ -8,47 +8,52 @@
 .container {
     display: flex;
     flex-direction: row;
-    min-height: 60vh;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+    min-height: 100vh;
+   
 }
 .box-bottom {
-   
-    width: 100%;
+  
+   width: 100%;
 }
 .bottom {
-    display: flex;
+    color: rgb(255, 255, 255);
     flex-direction: row;
-    background-color: rgb(0, 81, 255);
+    background-color: rgb(0, 0, 0);
     padding: 12px 10px;
     text-align: center;
     height: 50px;
     width: 150px;
     border-radius: 10px;
-    border-color: rgb(3, 168, 173);
+    border-color: rgb(82, 82, 82);
     border-radius: 3px;
-    margin-left: 80px;
+    margin: 20px;
+    font-size: 24px;
 
 }
 #intro {
-    background-color: rgb(0, 89, 255);
+    background-color: rgb(53, 53, 53);
     text-align: center;
     color: rgb(255, 255, 255);
     padding: 10px;
-    border: 3px solid rgba(0, 162, 255, 0.603);
-    width: 80%;
+    border: 6px solid rgb(0, 0, 0);
+    width: 100%;
     height: 150px;
     font-size: 80px;
-    font-family: 'Courier New';
+    font-family:Verdana, Geneva, Tahoma, sans-serif
 }
 
 footer {
-    background-color: cornflowerblue;
+    background-color: rgb(53, 53, 53);
     text-align: center;
     color: rgb(255, 255, 255);
     padding: 10px;
-    border: 3px solid rgba(0, 162, 255, 0.603);
+    border: 6px solid rgb(0, 0, 0);
     width: 100%;
     height: 150px;
-    font-size: 18px;
+    font-size: 42px;
     font-family: Helvetica;
     bottom: 100px;
 }
