--- a/Diocese/home/templates/index.html
+++ b/Diocese/home/templates/index.html
@@ -16,14 +16,14 @@
     <body>
 
     <main>
-        <div class="container">
+        <div class="container1">
             <div class="bottom">Inicio</div>
             <div class="bottom">Projetos</div>
             <div class="bottom">Livros</div>
             <div class="bottom">Doações</div>
             <div class="bottom">Sobre nós</div>   
         </div>
-
+        <div class="container2"></div>
         <section class="box-bottom"></section>     
         
     </main>  
